# tocc

./: Cargo.toml  LOGS.md  NOTES.md  README.md  rustfmt.toml
demo/: add.c  collatz.c  deref.c  div.c  djb2.c  fibo.c  id.c  mod.c  nprime.c  sdbm.c  slen.c  sum.c
paper/: ANSWERS.md  TIE.txt  TbD.txt  paper.tex  reference.bib  tool.tex
paper/sad/: paper.tex  reference.bib
src/: backend.rs  frontend.rs  helper.rs  main.rs
src/backend/: function.rs  ir.rs  mba.rs  mod.rs  support.rs  translation.rs
src/frontend/: ast.rs  mod.rs  sem.rs  semantics.rs  syntax.rs
tests/: 0.c  1.c  10.c  11.c  12.c  13.c  14.c  15.c  16.c  17.c  18.c  19.c  2.c  20.c  21.c  22.c  23.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c
