[package]
name = "ccc"
version = "0.1.0"
authors = ["TA Thanh Dinh <tathanhdinh@gmail.com>"]
description = "Coyote - a type-blurred C compiler"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift = "0.52.0"
cranelift-faerie = "0.52.0"
cranelift-module = "0.52.0"
cranelift-codegen = "0.52.0"
cranelift-simplejit = "0.52.0"
cranelift-preopt = "0.52.0"
zydis = "3.0.0"
peg = "0.6.0"
structopt = "0.3.7"
