[package]
name = "ucc"
version = "0.1.0"
authors = ["TA Thanh Dinh <tathanhdinh@gmail.com>"]
description = "Untyped C compiler"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift = "0.58.0"
cranelift-faerie = "0.58.0"
cranelift-module = "0.58.0"
cranelift-codegen = "0.58.0"
cranelift-simplejit = "0.58.0"
cranelift-preopt = "0.58.0"
zydis = "3.0.0"
peg = "0.6.1"
rand = "0.7.3"
target-lexicon = "0.10.0"
gumdrop = "0.7.0"
once_cell = "1.3.1"
